# BacklogProcessing

./: DESCRIPTION.md  Pipfile  README.md  package_release.md  setup.cfg  setup.py
.github/workflows/: pypi-package-publish.yml
backlogprocessing/: config.yml  logging_debug.conf  requirements.txt
backlogprocessing/backlogapiprocessmodule/: __init__.py  backlogapiprocess.py
backlogprocessing/utils/: AppManager.py  Config.py  Detail.py  Issue.py  Logger.py  Project.py  Summary.py  Utils.py  WikiBase.py  count_actual_hours_util.py  issue_type_util.py  issue_util.py  log_util.py  process_project_util.py
src/: config.yml  logging_debug.conf
src/backlogapiprocessmodule/: backlogapiprocess.py
src/backlogapiprocessmodule/models/: markdown_model.py
src/backlogapiprocessmodule/utils/: AppManager.py  Detail.py  Issue.py  Project.py  Summary.py  term_util.py  time_utils.py  wiki_util.py
