[metadata]
name = backlogprocessing
version = 0.1.0
description = processing working time on backlog.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT # ライセンス名（省略可）
license_file = LICENSE
url = https://github.com/tys-hiroshi/backlogprocessing

[options]
package_dir=
    =src
packages=find:
install_requires= # パッケージ自身の依存ライブラリ
        PyYAML
        requests
        certifi
        chardet
        python-dateutil
        idna
        jmespath
        pybacklog
        pytz
        ruamel.appconfig
        ruamel.std.argparse
        urllib3
        zope.interface

[options.packages.find]
where=src