[metadata]
author = Hiroshi Tashiro
name = backlogprocessing
version = 0.1.9
description = processing working time on backlog.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
url = https://github.com/tys-hiroshi/backlogprocessing

[options]
package_dir=
    =src
packages=find:
install_requires= # パッケージ自身の依存ライブラリ
        PyYAML
        azure-functions
        chardet
        python-dateutil
        jmespath
        pybacklog
        pytz
        ruamel.appconfig
        ruamel.std.argparse
        zope.interface
        typed-ast

[options.packages.find]
where=src
